@@ -8,6 +8,7 @@
 - added `CONF.node_modules` that affects `NPMINSTALL()` method
 - replaced `duration2` property with `ts` in the FlowStrem Message
 - revitalized code in the `FlowStreamMessage` instance
+- improved `Tangular` by adding private helpers per template
 
 ========================
 0.0.55
